--- a/Vim.wiki
+++ b/Vim.wiki
@@ -5,3 +5,15 @@
 === Tips ===
 * 在以普通用户打开的 vim 中保存一个 root 用户文件<br/>
     `:w !sudo tee %`
+* Linux 编译参数
+    {{{
+./configure --with-features=huge \
+            --enable-rubyinterp \
+            --enable-pythoninterp \
+            --enable-cscope \
+            --enable-multibyte \
+            --enable-xim \
+            --enable-fontset \
+            --enable-gui=gtk2 \
+            --with-compiledby="Your Name"
+    }}}
