new file:   Go.wiki 	modified:   Vim.wiki 	new file:   Web.wiki 	modified:   bookmarks.wiki 	modified:   index.wiki 	new file:   network-programming.wiki 	modified:   software-development.wiki 	modified:   template/code.html 	modified:   template/default.html

--- a/index.wiki
+++ b/index.wiki
@@ -7,6 +7,7 @@
 * 以前我觉得 vimwiki 太丑，现在我不在意丑不丑了
 * 其他的 wiki 软件/系统也很丑，而且我自己不能让它变好看
 
+把所有文件在七牛放了一份，作为备份(镜像)，地址 http://noodles-wiki.qiniudn.com 七牛的服务和他们送来的袜子、本子、键盘都很好。
 ----
 
 *我还缺少一个 favicon*
