add content, add tencent analytics

--- a/house-md.wiki
+++ b/house-md.wiki
@@ -7,3 +7,5 @@ S5E05 黑了一把计划生育
 S5E06 脑子有毛病的病人。Cuddy 领养失败，House 和 Cuddy 激吻。 [[https://en.wikipedia.org/wiki/Apgar_score|Apgar Score]] (阿普伽新生儿评分)
 
 S5E09 病人拿枪劫持人质到 Cuddy 办公室，House 正在那里恶作剧。13 差点把命搭上。五星推荐。
+
+S5E11 Wilson 忽悠 Taub 和 Kutner 时提到 House 爱上了 Irene Adler
