--- a/house-md.wiki
+++ b/house-md.wiki
@@ -9,3 +9,5 @@ S5E06 脑子有毛病的病人。Cuddy 领养失败，House 和 Cuddy 激吻。 
 S5E09 病人拿枪劫持人质到 Cuddy 办公室，House 正在那里恶作剧。13 差点把命搭上。五星推荐。
 
 S5E11 Wilson 忽悠 Taub 和 Kutner 时提到 House 爱上了 Irene Adler
+
+S5E16 House 服用 [[https://en.wikipedia.org/wiki/Methadone|Methadone 美沙酮]], 后放弃。Foreman 对 House 使出了"XX 龙爪手"。House 刮了胡子。
