--- a/software-development.wiki
+++ b/software-development.wiki
@@ -1,11 +1,5 @@
 %title 技术相关
 
-[[Ubuntu]]
-
-[[Vim]]
-
-[[bookmarks-tools-for-coder|开发相关工具书签]]
-
 [[code|代码]]
 
 [[Web]]
@@ -13,5 +7,9 @@
 [[Go]]
 
 [[network-programming|网络编程]]
+
+[[Ubuntu]]
+
+[[dev-tools|工具]]
 
 [[Tips]]
