--- a/house-md.wiki
+++ b/house-md.wiki
@@ -13,3 +13,7 @@ S5E11 Wilson 忽悠 Taub 和 Kutner 时提到 House 爱上了 Irene Adler
 S5E16 House 服用 [[https://en.wikipedia.org/wiki/Methadone|Methadone 美沙酮]], 后放弃。Foreman 对 House 使出了"XX 龙爪手"。House 刮了胡子。
 
 S5E18 继 Foreman 之后，又一位有色人种兄弟对 House 做了“惨无人道”的举动，来报复 House 对他的捉弄。事情由一只据说睡谁谁死的猫引起。
+
+S5E19 很有意思的病例，比霍金残得还厉害，像《潜水钟与蝴蝶》中那样。House 似乎开始出现精神方面的症状。
+
+S5E20 Kutner 很突然地自杀，从此离开。电视剧的气氛转入暗淡。Taub 装作“漠不关心”，结尾处别人都去参加葬礼，Taub 在医院走廊的椅子上大哭。House 认为是他杀，这可能是 House 的又一个精神问题。
