--- a/design.wiki
+++ b/design.wiki
@@ -5,7 +5,7 @@
     與大家共勉之。」——vinta/paranoid-auto-spacing
 
 
-* 中文和英文、数字、半角符号之间留空白。
+* 中文和英文、数字、大部分半角符号之间留空白。
 * 中英文混排，除非是遇到完成的英文句子，其余情况一律使用全角符号。
 * 段首 *不要* 空两格
 
