modified:   bookmarks-photos.wiki 	modified:   design.wiki 	modified:   index.wiki

--- a/bookmarks-photos.wiki
+++ b/bookmarks-photos.wiki
@@ -8,3 +8,4 @@
 
 === 壁纸 ===
 * [[http://wallbase.cc/|Wallbase.cc]] 太他妈时尚了这壁纸站
+* [[http://interfacelift.com|interfacelite]] 能找到一张图各种分辨率的壁纸，从各种手机到 2880x1800 的 Retina 屏幕壁纸都有
