--- a/design.wiki
+++ b/design.wiki
@@ -6,7 +6,8 @@
 
 
 * 中文和英文、数字、大部分半角符号之间留空白。
-* 中英文混排，除非是遇到完成的英文句子，其余情况一律使用全角符号。
+* 中英文混排，除非是遇到完整的英文句子，其余情况一律使用全角符号。
+* 括号中全都是英文，使用半角英文括号，如果括号中有中文，则使用中文括号。
 * 段首 *不要* 空两格
 
 ----
