--- a/Go.wiki
+++ b/Go.wiki
@@ -9,4 +9,5 @@
  [[Go-basic|Go 基础]] 这是 Go 的基础语法里与 C 不一样的地方
 
 === 资源 ===
-[[https://github.com/codegangsta/gin|gin]] 可以自动重新加载 Go 代码的工具
+* [[https://github.com/codegangsta/gin|gin]] 可以自动重新加载 Go 代码的工具
+* [[https://github.com/golang/lint|golint]] 检查不太规范的代码，给出修改 *建议*
